[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/Images/Bgd (1).png" type="Texture" id=2]
[ext_resource path="res://title_screen/fonts/THE AFFORD.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 6
border_color = Color( 0.815686, 0.0431373, 0.0431373, 0.988235 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bgd (1)" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 60.0
margin_right = 1200.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameTitle" type="Label" parent="Menu"]
margin_right = 1120.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.811765, 0.709804, 0.231373, 1 )
text = "Golden Dragon"
align = 2

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 119.0
margin_right = 1120.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_right = 700.0
margin_bottom = 481.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_Space" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 704.0
margin_right = 1120.0
margin_bottom = 481.0
rect_min_size = Vector2( 416, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/CenterRow/Button_Space"]
margin_right = 416.0
margin_bottom = 65.0
rect_min_size = Vector2( 416, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="Menu/CenterRow/Button_Space"]
margin_top = 71.0
margin_right = 416.0
margin_bottom = 151.0
rect_min_size = Vector2( 416, 80 )
size_flags_vertical = 3
custom_styles/pressed = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.803922, 0.792157, 0.627451, 1 )
text = "New Game"
flat = true
align = 2

[node name="Settings" type="Button" parent="Menu/CenterRow/Button_Space"]
margin_top = 157.0
margin_right = 416.0
margin_bottom = 237.0
rect_min_size = Vector2( 416, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.803922, 0.792157, 0.627451, 1 )
text = "Settings"
flat = true
align = 2

[node name="Help" type="Button" parent="Menu/CenterRow/Button_Space"]
margin_top = 243.0
margin_right = 416.0
margin_bottom = 323.0
rect_min_size = Vector2( 416, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.803922, 0.792157, 0.627451, 1 )
text = "Help"
flat = true
align = 2

[node name="Exit" type="Button" parent="Menu/CenterRow/Button_Space"]
margin_top = 329.0
margin_right = 416.0
margin_bottom = 409.0
rect_min_size = Vector2( 416, 80 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.803922, 0.792157, 0.627451, 1 )
text = "Exit"
flat = true
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterRow/Button_Space"]
margin_top = 415.0
margin_right = 416.0
margin_bottom = 481.0
rect_min_size = Vector2( 416, 0 )
size_flags_vertical = 3
[connection signal="button_down" from="Menu/CenterRow/Button_Space/StartGame" to="." method="_on_StartGame_button_down"]
[connection signal="focus_entered" from="Menu/CenterRow/Button_Space/StartGame" to="." method="_on_Start_Game_focus_entered"]
[connection signal="focus_exited" from="Menu/CenterRow/Button_Space/StartGame" to="." method="_on_StartGame_focus_exited"]
[connection signal="focus_entered" from="Menu/CenterRow/Button_Space/Settings" to="." method="_on_Settings_focus_entered"]
[connection signal="focus_exited" from="Menu/CenterRow/Button_Space/Settings" to="." method="_on_Settings_focus_exited"]
[connection signal="focus_entered" from="Menu/CenterRow/Button_Space/Help" to="." method="_on_Help_focus_entered"]
[connection signal="focus_exited" from="Menu/CenterRow/Button_Space/Help" to="." method="_on_Help_focus_exited"]
[connection signal="focus_entered" from="Menu/CenterRow/Button_Space/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Menu/CenterRow/Button_Space/Exit" to="." method="_on_Exit_focus_exited"]
